--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <body>
     <h1> I'm a header </h1>
     <img src="https://avatars0.githubusercontent.com/u/50629866?v=4">
+    <ul> 
+      <ul> Youtube </ul>
+      <ul> Twitter </ul>
+      <ul> Reddit </ul>
+    </ul>
 Hello there, awesome person!
   </body>
 </html>
