--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <h1> I'm a header </h1>
     <img src="https://avatars0.githubusercontent.com/u/50629866?v=4">
     <ul> 
-      <ul> Youtube </ul>
-      <ul> Twitter </ul>
-      <ul> Reddit </ul>
+      <ul><a href="https://www.youtube.com/"> Youtube</a></ul>
+      <ul><a href="https://twitter.com"> Twitter</a></ul>
+      <ul><a href="https://www.reddit.com/> Reddit</a></ul>
     </ul>
 Hello there, awesome person!
   </body>
