--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <ul> 
       <ul><a href="https://www.youtube.com/"> Youtube</a></ul>
       <ul><a href="https://twitter.com"> Twitter</a></ul>
-      <ul><a href="https://www.reddit.com/> Reddit</a></ul>
+      <ul><a href="https://www.reddit.com"/> Reddit</a></ul>
     </ul>
 Hello there, awesome person!
   </body>
