--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1> I'm a header </h1>
+    <h1> StefanSite home </h1>
     <img src="https://scontent.fbed1-2.fna.fbcdn.net/v/t1.0-9/36189188_1828619017192593_5879495450070876160_n.jpg?_nc_cat=104&_nc_ht=scontent.fbed1-2.fna&oh=eb14aecf96e9e34ce3bb37c1227c6be7&oe=5D5A480F">
     <ul> 
       <ul><a href="https://www.youtube.com/"> Youtube</a></ul>
